--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.6.3",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.4",
     "react": "^16.13.1",
